--- a/app/src/main/res/layout/fragment_menulist.xml
+++ b/app/src/main/res/layout/fragment_menulist.xml
@@ -40,23 +40,15 @@
         android:layout_margin="15dp"
         android:background="@drawable/bg_left_black">
 
-        <ImageView
-            android:id="@+id/iv_icon"
-            android:layout_width="50dp"
-            android:layout_height="26dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="21dp"
-            android:background="@drawable/meal_bnt_gouwuche"/>
-
         <TextView
+            android:id="@+id/tv_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/iv_icon"
             android:text="空空如也"
             android:textColor="@color/text_white"
             android:textSize="15sp"
+            android:layout_marginLeft="100dp"
             android:visibility="visible"/>
 
         <RelativeLayout
@@ -64,7 +56,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="invisible"
-            android:layout_toRightOf="@id/iv_icon">
+            android:layout_marginLeft="100dp"
+            >
 
             <TextView
                 android:id="@+id/tv_total_price"
@@ -100,4 +93,29 @@
             android:textColor="@color/text_white"
             android:textSize="17sp"/>
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/iv_shop_cat"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/meal_bnt_gouwuche1"/>
+
+    <TextView
+        android:id="@+id/tv_car_amount"
+        android:layout_width="wrap_content"
+        android:minWidth="20dp"
+        android:layout_height="20dp"
+        android:layout_marginLeft="-8dp"
+        android:text="10"
+        android:gravity="center"
+        android:layout_toRightOf="@+id/iv_shop_cat"
+        android:layout_alignParentBottom="true"
+        android:textSize="8dp"
+        android:layout_marginBottom="30dp"
+        android:textColor="@color/white"
+        android:background="@drawable/bg_red_round"/>
+
 </RelativeLayout>
