--- a/app/src/main/res/layout/item_product_name.xml
+++ b/app/src/main/res/layout/item_product_name.xml
@@ -15,6 +15,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/ll_goods_description"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="12dp"
@@ -81,7 +82,7 @@
                 android:layout_centerVertical="true"
                 android:text="￥666"
                 android:textColor="@color/red"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -89,18 +90,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="12dp"
+                android:layout_marginLeft="6dp"
                 android:layout_toRightOf="@id/tv_money"
                 android:text="￥14.9"
                 android:textColor="@color/hint_text_color"
-                android:textSize="12sp" />
+                android:textSize="10sp" />
+
+            <ImageView
+                android:id="@+id/iv_delete"
+                android:layout_width="37dp"
+                android:layout_height="37dp"
+                android:layout_toLeftOf="@+id/tv_amount"
+                android:padding="10dp"
+                android:src="@drawable/meal_ic_jianshao" />
+            <TextView
+                android:id="@+id/tv_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textColor="#333333"
+                android:text="1"
+                android:layout_toLeftOf="@+id/iv_add"
+                />
 
             <ImageView
                 android:id="@+id/iv_add"
                 android:layout_width="37dp"
                 android:layout_height="37dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="5dp"
                 android:padding="10dp"
                 android:src="@drawable/meal_ic_zengjia" />
         </RelativeLayout>
